# Rag-agent

./: .env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
agent_app/: agent.py  requirements.txt
deployment/: deploy.py
