[project]
name = "rag"
version = "0.1.0"
description = "Answer questions related to Vertex AI documentation using Vertex AI RAG Engine"
authors = [
    { name = "Hangfei Lin", email = "hangfei@google.com" },
    { name = "Chouaieb Nemri", email = "nemri@google.com" },
]

license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12" # Keep it at 3.11, or try 3.10 if issues persist
pydantic-settings = "^2.8.1"
tabulate = "^0.9.0"
google-auth = "^2.36.0"
requests = "^2.32.3"
# Reverting google-adk to match the previous working version
google-adk = {extras = ["database"], version = "==0.5.0"}
# Keeping google-cloud-aiplatform for now, but be aware of potential future conflicts
google-cloud-aiplatform = { extras = [
    "adk",
    "agent-engines",
], version = "^1.93.0" }
# Keeping llama-index for now, but be aware of potential future conflicts
llama-index = "^0.12"
uvicorn = "^0.35.0"
# Updated google-genai version to satisfy google-adk's requirement
google-genai = "^1.27.0"
# Dependencies for DatabaseSessionService (already good)
SQLAlchemy = "^2.0.0"
aiosqlite = "^0.20.0"
python-dotenv = "^1.1.0" # Ensure this is present if your .env file is used

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
scikit-learn = "^1.6.1"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"] # Adjusted for broader compatibility
build-backend = "poetry.core.masonry.api"

[tool.poetry] # Added this section header as it was missing or misplaced
package-mode = false # Moved this under the correct [tool.poetry] section
